--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "oh-my-zsh"]
 	path = oh-my-zsh
 	url = git@github.com:kliu/oh-my-zsh.git
+[submodule "aria2/webui-aria2"]
+	path = aria2/webui-aria2
+	url = git@github.com:kliu/webui-aria2.git
